# minecraft-opengl

./: CMakeLists.txt  LICENSE  README.md  main.cpp  shader.cpp  shader.hpp  texture_atlas.cpp  texture_atlas.hpp
shaders/: quadFragment.glsl  quadVertex.glsl  quad_fragment.glsl  quad_vertex.glsl  vertex.glsl
src/: camera.cpp  camera.hpp  game.cpp  game.hpp  main.cpp  shader.cpp  shader.hpp  texture_atlas.cpp  texture_atlas.hpp  window.cpp  window.hpp
src/opengl/: shader.cpp  shader.hpp  window.cpp  window.hpp
src/primitive/: direction.hpp  quad.hpp  texture.hpp  vertex.hpp
src/primitives/: chunk_mesh.cpp  chunk_mesh.hpp  direction.hpp  quad.cpp  quad.hpp
src/system/: atlas_manager.cpp  atlas_manager.hpp  direction.hpp  player_camera.cpp  player_camera.hpp
src/systems/: atlas_manager.cpp  atlas_manager.hpp  player_camera.cpp  player_camera.hpp
src/world/: block.hpp  chunk.cpp  chunk.hpp
